Issue #2119991 by porridj, hass, jessebeach: Missing padding on "Edit shortcuts".

--- a/css/navbar.theme-rtl.css
+++ b/css/navbar.theme-rtl.css
@@ -57,3 +57,9 @@
 .drupal-navbar .navbar-toggle-orientation > .navbar-lining {
   float: left;
 }
+/**
+ * Fix Shortcuts Edit link
+ */
+.drupal-navbar .navbar-tray-horizontal .edit-shortcuts {
+  float: right;
+}
