--- a/css/navbar.theme.css
+++ b/css/navbar.theme.css
@@ -132,3 +132,10 @@
   cursor: pointer;
   display: inline-block;
 }
+
+/**
+ * Fix Shortcuts Edit link
+ */
+.drupal-navbar .navbar-tray-horizontal .edit-shortcuts {
+  float: left; /* LTR */
+}
